--- a/index.html
+++ b/index.html
@@ -235,8 +235,9 @@
       <tr>
         <td class="intro-text" style="width:100%;">
           <p style="margin-top: 0;">
-            I work as an AI Research Scientist at <a href="https://www.sionic.ai/en">Sionic AI</a>. I am currently leading a multimodal LLM research project to optimize AI reasoning and content detection in various file formats. 
-            Prior to joining Sionic, I graduated from <a href="https://cds.nyu.edu/">Center for Data Science</a> at <a href="https://www.nyu.edu/">New York University</a>. I worked as a Medical Data Scientist at <a href="https://www.samsunghospital.com/gb/language/english/main/index.do">Samsung Medical Center</a> under the guidance of <a href="https://www.researchgate.net/profile/Kyunga-Kim-2">Dr. Kyunga Kim</a> and <a href="http://www.samsunghospital.com/home/reservation/common/eng/doctorProfile.do?dr_no=3004">Dr. Seongyong Park</a>. Then, I worked at <a href="http://www.snuh.org/global/en/main.do">Seoul National University Hospital</a> under the guidance of <a href="http://www.snuh.org/global/en/blog/66015/paper.do">Dr. Hyunkyu Yoon</a>.
+            I recently founded a Healthcare AI company. I graduated from <a href="https://cds.nyu.edu/">Center for Data Science</a> at <a href="https://www.nyu.edu/">New York University</a>. 
+            I worked as a Medical Data Scientist at <a href="https://www.samsunghospital.com/gb/language/english/main/index.do">Samsung Medical Center</a> under the guidance of <a href="https://www.researchgate.net/profile/Kyunga-Kim-2">Dr. Kyunga Kim</a> 
+            Then, I worked at <a href="http://www.snuh.org/global/en/main.do">Seoul National University Hospital</a> under the guidance of <a href="http://www.snuh.org/global/en/blog/66015/paper.do">Dr. Hyunkyu Yoon</a>.
             My research interests include Real-World Data Analytics, Predictive Modeling, Explainable AI, Interpretable ML, Multimodal Learning, Data Mining, and Data Visualization. 
             My primary research objectives are as follows:
             <ol>
@@ -312,26 +313,27 @@
             <img class="mySlides depth" src="images/ESCC_image_2.png" alt="ESCC Research Image 2">
             <img class="mySlides depth" src="images/ESCC_image_3.png" alt="ESCC Research Image 3">
             <img class="mySlides depth" src="images/ESCC_image_4.png" alt="ESCC Research Image 4">
+            <img class="mySlides depth" src="images/ESCC_image_5.png" alt="ESCC Research Image 5">
             <img class="mySlides depth" src="images/ESCC_image_1.png" alt="ESCC Research Image 1">
             <img class="mySlides depth" src="images/ESCC_image_2.png" alt="ESCC Research Image 2">
             <img class="mySlides depth" src="images/ESCC_image_3.png" alt="ESCC Research Image 3">
             <img class="mySlides depth" src="images/ESCC_image_4.png" alt="ESCC Research Image 4">
-            <img class="mySlides depth" src="images/ESCC_image_1.png" alt="ESCC Research Image 1">
-            <img class="mySlides depth" src="images/ESCC_image_4.png" alt="ESCC Research Image 4">
+            <img class="mySlides depth" src="images/ESCC_image_5.png" alt="ESCC Research Image 5">
           </div>
         </td>
         <td class="content-cell">
           <a href="images\LM_Metastasis_Abstract.pdf" class="papertitle">
-            Application of Network Analysis and Association Rule Mining for visualizing the Lymph Node Metastasis Patterns in Esophageal Squamous Cell Carcinoma
+            Application of network analysis and association rule mining for visualizing the lymph node metastasis patterns in esophageal squamous cell carcinoma
           </a>
           <br>
           <strong>Baek, S.</strong>, Kim, K.†, Park, S.Y.†, Jeon, Y. J., Lee, J. H., Cho, J. H., Kim, H. K., Choi, Y. S., Zo, J. I., Shim, Y. M.
           <br>
-          <em>Scientific Reports (in 2nd round review)</em>, 2024
+          <em>Scientific Reports</em>, 2025
           <br>
+          <a href="https://doi.org/10.2196/52134" class="reference-links">paper</a> /
+          <a href="images/ESCC_thesis.pdf" class="reference-links">pdf</a> /
           <a href="https://github.com/Baeksw98/SMC_LN_Metastasis_Research" class="reference-links">code</a> /
-          <a href="images\LM_Metastasis_Abstract.pdf" class="reference-links">abstract</a> 
-          <!-- <a href="data/baek_ESCC.txt" class="reference-links">citation</a> -->
+          <a href="data/baek_COVID.txt" class="reference-links">citation</a> 
           <p></p>
           <ul class="bullet-point">
             <li>Conducted a retrospective observational study on analyzing the patterns of lymphatic metastases in patients with esophageal squamous cell carcinoma (ESCC) as the <strong> first author </strong> under the supervision of Dr. Seongyong Park and Dr. Kyunga Kim.</li>
@@ -385,6 +387,9 @@
         <td colspan="2">
           <ul class="bullet-point">
             <li>
+              <strong>Poster Presentation</strong>, "A Comparative Study of Large-Scale Vision-Language Models for Enhancing Korean Image Captioning Performance", HCLT-KACL 2024, South Korea, Oct 2024
+            </li>
+            <li>
               <strong>Oral Spotlight & Poster Presentation</strong>, "Early Triaging Support System for Hospitalized COVID-19 Patients: a Machine-Learning based Severity Prediction Model using Nationwide Multi-Center Real World Data", American Society for Microbiology (ASM) 2023, Houston, USA, June 2023
             </li>
             <li>
@@ -408,10 +413,10 @@
         <td colspan="2">
           <ul class="bullet-point">
             <li>
-              <strong>Baek, S.</strong>, Kim, K. “Apparatus and method for predicting patient prognosis using machine learning model”. Korea Patent Pending: No. 10-2023-0129662. 26 Sep. 2023
+              <strong>Baek, S.</strong>, Kim, K. “Apparatus and method for predicting patient prognosis using machine learning model”. Korea Patent: No. 10-2023-0129662. 26 Sep. 2023
             </li>
             <li>
-              <strong>Baek, S.</strong>, Kim, K., Park, S.Y. “Visualization method for lymph node metastases in esophageal cancer and apparatus”. Korea Patent Pending: No. 10-2024-0002349. 05 Jan. 2024
+              <strong>Baek, S.</strong>, Kim, K., Park, S.Y. “Visualization method for lymph node metastases in esophageal cancer and apparatus”. Korea Patent: No. 10-2024-0002349. 05 Jan. 2024
             </li>
           </ul>
         </td>
@@ -426,8 +431,8 @@
           <ul class="bullet-point">
             <li>
               <strong>AI Research Team, Sionic AI, Seoul, Korea</strong><br>
-              AI Research Scientist, 07/2024-Current<br>
-              Leading a multimodal LLM research project to optimize AI reasoning and content detection in various file formats, aiming to develop state-of-the-art models for on-premise deployment.
+              AI Research Scientist, 07/2024-10-2024<br>
+              Led a multimodal LLM research project to optimize AI reasoning and content detection in various file formats.
             </li>
             <li>
               <strong>Department of Anesthesiology and Pain Medicine, Seoul National University Hospital, Seoul, Korea</strong><br>
@@ -456,7 +461,7 @@
         <td colspan="2">
           <ul class="bullet-point">
             <li>
-              <strong>Statistical Peer Reviewer</strong> for original articles and research letters, <strong>JAMA Network Open</strong>, 01/2024-Current
+              <strong>Peer Reviewer</strong> for original articles and research letters, <strong>JAMA Network Open</strong>, 01/2024-Current
             </li>
           </ul>
         </td>
@@ -472,17 +477,7 @@
             <li>
               <strong>Institute of Convergence Medicine with Innovative Technology, Seoul National University Hospital, Seoul, Korea</strong><br>
               AI Research Seminar Speaker, 01/2024-05/2024<br>
-              Expanded modeling options in healthcare AI research for 30+ researchers by introducing state-of-the-art transformer-based models.
-            </li>
-            <li>
-              <strong>Kim Study Online Platform, Seoul, Korea</strong><br>
-              AI/ML Programming Lecturer, 07/2023-Current<br>
-              Designed and implemented a customized curriculum for 20+ students, focusing on programming techniques, explainable AI, data mining, and data visualization.
-            </li>
-            <li>
-              <strong>Research Institute for Future Medicine, Samsung Medical Center, Seoul, Korea</strong><br>
-              Healthcare AI Instructor, 04/2023-11/2023<br>
-              Introduced healthcare AI tools to medical doctors and researchers by conducting monthly AI seminars.
+              Expanded modeling options in healthcare AI research for 10+ researchers by introducing state-of-the-art transformer-based models.
             </li>
           </ul>
         </td>
